aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_lit_mem.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovLitMem(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 15,
                end: 19,
            },
        ),
    ),
)
