aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_lit_mem_var.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovLitMem(
        Address(
            Var(
                ByteOffset {
                    start: 7,
                    end: 10,
                },
            ),
        ),
        HexLiteral(
            ByteOffset {
                start: 14,
                end: 18,
            },
        ),
    ),
)
