aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_lit_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 10,
                    end: 14,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 17,
                    end: 19,
                },
            ),
        },
    ),
)
