aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_lit_reg_var.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
