aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_mem_reg.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovMemReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Address(
            ByteOffset {
                start: 11,
                end: 15,
            },
        ),
    ),
)
