aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mov__tests__mov_mem_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovMemReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 11,
                        end: 15,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 18,
                        end: 20,
                    },
                ),
            },
        ),
    ),
)
